# War3ModelView

./: -AllMatches  .gitignore  123.md  AGENTS.md  BATCH_LOADING_OPTIMIZATION.md  BUILD_INSTRUCTIONS.md  MDX800_Format_Specification.md  PROJECT_STATUS.md  QQ_Verification_Handoff.md  QQ群验证功能详细说明文档.md  README.md  Tauri_MultiWindow_Migration_Guide.md  ai_handover.md  analyze_models.js  apply_patch.js  backup_project.ps1  blenderanim.py  create_icon.js  debug_death_export.js  dump_nodes.js  electron.vite.config.ts  fix_revert_error.js  log.txt  package-lock.json  package.json  patch_transparency.js  patch_war3_model.js  project_comparison.md  project_handover_summary.md  read_function.js  read_function_header.js  revert_patch.js  revert_patch_force.js  revert_transparency.js  run_dev.bat  run_tauri.ps1  task.md  tasks.json  test_alpha_interp.js  test_alpha_logic.js  (+17 more)
.cursor/: mcp.json
.gemini/: settings.json
activation/: qq-policy.txt
docs/: AI_Collaboration_Hard_Rules.md  Architecture_Redesign_Blueprint.md  Development_Constraints.md  GlobalSequenceEnhancement.md  GlobalSequence_Fix_and_Animation_Freeze_Handoff.md  Project_Optimization_Roadmap.md  QQ_REMOTE_ACTIVATION_POLICY.adoc  Regression_Checklist.md  Ribbon_Rendering_Technical_Handoff.md  Standalone_Window_Optimization_Plan.md  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: tauri-prebuild.ps1
src-tauri/src/: activation.rs  app_paths.rs  app_settings.rs  copy_utils.rs  delete_utils.rs  main.rs  model_manifest.rs  mpq_manager.rs  remote_activation_policy.rs  texture_decode.rs  texture_encode.rs
(+321 files in other folders)
