[package]
name = "war3-model-editor"
version = "1.0.0"
description = "Warcraft 3 Model Editor"
authors = ["you"]
edition = "2021"
default-run = "war3-model-editor"

[[bin]]
name = "war3-model-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-fs = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"
tauri-plugin-http = "^2.0.0"
tauri-plugin-process = "^2.0.0"
tauri-plugin-shell = "^2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wow-mpq = "0.1"
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_Storage_FileSystem", "Win32_Security"] }
# Activation System Dependencies
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
sha2 = "0.10"
chrono = "0.4"
rand = "0.8"
uuid = { version = "1.7", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking"] }
clipboard-win = "5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables Link Time Optimization
opt-level = "z" # Optimize for size
strip = true # Remove debug symbols
